Final push live

--- a/EmployeeManager/EmployeeManager/appsettings.json
+++ b/EmployeeManager/EmployeeManager/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+    "COnnectionStrings": {
+        "DefaultConnection": "Server=tcp:employeemanagerserver.database.windows.net,1433;Initial Catalog=EmployeeManager_DB;Persist Security Info=True;User ID=davidaleiter;Password=EmployeeManagerServerLogin987456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
+} 
