--- a/EmployeeManager/EmployeeManager/EmployeeManager.csproj
+++ b/EmployeeManager/EmployeeManager/EmployeeManager.csproj
@@ -14,6 +14,8 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="4.4.1" />
+    <PackageReference Include="EntityFramework" Version="6.4.0" />
+    <PackageReference Include="jQuery" Version="3.5.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.10" />
   </ItemGroup>
